Edited wiki page through web user interface.

--- a/wiki/Authentication.wiki
+++ b/wiki/Authentication.wiki
@@ -20,7 +20,7 @@ Then there are 2 maybe random hex values
 
 wx yz
 
-Then there is the old bud
+Then there is the old bud d3 he comes every time when you are guest ;)
 
 d3
 
